# ants

./: README.md
.github/workflows/: CI.yml
ants_ai/: Cargo.toml  LICENSE  README.md  pyproject.toml
ants_ai/ants_ai/: __init__.py  ants_ai.pyi  env.py  visualizer.py
ants_ai/ants_ai/agents/: __init__.py  agent.py  random.py
ants_ai/examples/: random_agent.py  tutorial.py  tutorial.rs
ants_ai/src/: entities.rs  game.rs  lib.rs  map.rs  replay.rs
ants_engine/: Cargo.toml
ants_engine/examples/: render.rs  tutorial.rs
ants_engine/examples/maps/: tutorial.map
ants_engine/src/: entities.rs  game.rs  lib.rs  map.rs  replay.rs  simulation.rs
ants_engine/tests/test_data/: example.map
visualizer/: README.md  game.py  main.py  pyproject.toml
visualizer/example/: replay_1.json
