[package]
name = "ants_engine"
version = "1.0.0"
edition = "2021"

[lib]
name = "ants_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
crossterm = "0.28.1"
pyo3 = { version = "0.24.1", features = ["multiple-pymethods"] }
rand = "0.8.5"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[dependencies.uuid]
version = "1.11.0"
features = ["v4"]
