[tool.poetry]
name = "ants-visualizer"
version = "0.0.1"
description = "Visualizer for Ants."
authors = ["Allan Reyes <allan_bassail@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
